service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ingress-namespace
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP # or NodePort, depending on your setup
